Fix scroll buttons overlay content on smaller screens #mentor-feedback 04
Add diplay: hide on container-scroll-buttons and display: hide ond media query

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -348,6 +348,7 @@ main {
 }
 
 .container-scroll-buttons {
+    display: none;
     position: sticky;
     inline-size: 2rem;
     bottom: 20dvh;
@@ -493,6 +494,11 @@ input[type="submit"]:hover {
     header .navbar-links ul li {
         margin: 0.5rem 0;
         padding: 0 1rem;
+    }
+
+    /* Scroll Buttons */
+    .container-scroll-buttons {
+        display: block;
     }
 
 
